add dark theme, add theme switcher

--- a/src/components/container/container.sass
+++ b/src/components/container/container.sass
@@ -1,8 +1,4 @@
 .container
-    // width: 700px
-    // min-height: 500px
-    // border: 1px solid #727272
-    // border-radius: 10px
     justify-content: center
     align-items: center
     flex-direction: column
@@ -11,6 +7,10 @@
     &__button
         padding: 10px 25px
         border-radius: 10px
-        background-color: #64a9f8
+        background-color: var(--accent)
         font-size: 24px
         cursor: pointer
+        margin-top: 20%
+
+        &_toggle
+            margin-top: 0
