--- a/src/App.sass
+++ b/src/App.sass
@@ -1,24 +1,29 @@
+body, html, #root
+    margin: 0
+    padding: 0
+    height: 100%
+    background-color: var(--background-color)
+    color: var(--text-color)
+
 .flex
     display: flex
 
 .App
-    justify-content: center
-    align-items: center
     flex-direction: column
     
 html
-    --accent: #4BA1DF
+    --accent: #7bc4f8
     --background-color: #F9F9F9
     --text-color:#292929
     --shadow: rgba(0, 0, 0, 0.3)
-    --border: rgba(0, 0, 0, 0.0)
+    --border: #b1b0b0
 
 html[data-theme='dark']
-    --accent: #4BA1DF
-    --background-color: #1E2327
+    --accent: #4493cc
+    --background-color: #222222
     --text-color: #F9F9F9
     --shadow: rgba(0, 0, 0, 0.0)
-    --border: #636175
+    --border: #474747
 
 
 // animations
