--- a/src/components/loading/loading.sass
+++ b/src/components/loading/loading.sass
@@ -1,7 +1,7 @@
 .loading
     justify-content: center
     align-items: center
-    margin-top: 20%
+    margin-top: 20px
 
     > p
         font-size: 24px
